thesis: Add ToDos

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -569,6 +569,9 @@ Addresses will be treated as physical ones.
 
 \subsubsection{Threat Model}
 
+% TODO: Es ist anzunehmen, dass information flow zwischen den modes stattfindet; verifiziere nicht, ob das passiert, sondern wie man das verhindern könnte
+% TODO: privelege escalation vulnerabilities
+
 Now that it has been ruled out to include sub-architectural hardware mechanisms or virtual memory in the model targeted for verification, the question still is open what \textit{will} be part of the model.
 This includes the question of the threat model of the higher level properties to be verified.
 
