--- a/thesis/sections/risc-v.tex
+++ b/thesis/sections/risc-v.tex
@@ -543,6 +543,7 @@ Someone experienced in the field of microcontrollers and processors might find M
 These points were left out or left unspecified deliberately.
 However, a good reasoning for this can not be given at this point.
 The development of the MINRV8 architecture was tightly coupled to its implementation in nuXmv which will presented in section \ref{sec:model-implementation}.
+% TODO: fix ref
 In section \ref{sec:model-scope}, the scope of the MINRV8 architecture will be analyzed - both in terms of what it tries to achieve and what it actually is capable of representing, i.e. how close it is to real-life architectures.
 In this section, the aforementioned problems will also be reflected.
 
