thesis: Add discussion section on assumptions

--- a/thesis/sections/background.tex
+++ b/thesis/sections/background.tex
@@ -568,6 +568,7 @@ Mechanisms that provide isolation between memory regions will be modelled, howev
 Addresses will be treated as physical ones.
 
 \subsubsection{Threat Model}
+\label{sec:threat-model}
 
 % TODO: Es ist anzunehmen, dass information flow zwischen den modes stattfindet; verifiziere nicht, ob das passiert, sondern wie man das verhindern könnte
 % TODO: privelege escalation vulnerabilities
