--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -518,6 +518,7 @@ One possible approach to this would be to extend the MINRV8 architecture by said
 \end{table}
 
 \subsubsection{The SYSRET Vulnerability}
+\label{sec:sysret}
 
 The so called \textit{SYSRET vulnerability} to the intel x86-64 architecture is listed as vulnerability \textit{CVE-2012-0217} by the \textit{Common Vulnerabilities and Exposures} database (CVE\textsuperscript{\textregistered}) \cite{SYSRET-vuln} and allegedly has also been found by Rafal Wojtczuk \cite{SYSRETFreeBSD,SYSRETDebian,SYSRETCert}.
 To our knowledge, the most concise and freely available explanation of the vulnerability can be found in the blog post \textit{The Intel SYSRET Privilege Escalation} by George Dunlap published on the page of Xen Project, a community for virtualization-related open source projects which in part also have been affected by said vulnerability \cite{Dunlap19}.
